# MLFlow--TN

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  main.py  pyproject.toml  run_pipeline.sh
config/: data.yaml  db.yaml  env.py  features.yaml  filepaths.py  ml.yaml  search_spaces.yaml
data/: data_hash.py  metadata.py  schema.py  split_features_target.py  train_test_split.py
db/: db_loader.py  engine.py
features/: aggregations.py  data_processing.py  interactions.py  lag_features.py  rolling_features.py  schema.py  temporal_features.py
log/: logger.py
metrics/: factory.py  metrics.py
models/: base.py  catboost_model.py  factory.py
optimizer/: base.py  factory.py  grid_optimizer.py  optuna_optimizer.py  random_optimizer.py
pipelines/: data_builder.py  evaluation_pipeline.py  features_builder.py  prediction_builder.py  train_pipeline.py
preprocessing/: base.py  factory.py  preprocessor_v1.py
search_space/: search_space.py
training/: cv_factory.py  trainer.py
utils/: artifact_logger.py  explainability.py  hardware.py  helpers.py  mlflow_helpers.py
