[project]
name = "tn-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3==1.42.85",
    "dvc==3.67.1",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "psycopg2-binary",
    "sqlalchemy==2.0.46",
    "scikit-learn==1.8.0",
    "matplotlib==3.10.8",
    "mlflow==3.8.1",
    "shap==0.51.0",
    "optuna==4.7.0",
    "catboost==1.2.10"

]